ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-juliabox
  namespace: juliabox
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - juliabox.stouffcapital.com
    secretName: juliabox-stouffcapital-service-tls
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: juliabox.stouffcapital.com
    http:
      paths:
      - path: /
        backend:
          serviceName: proxy-public
          servicePort: 80
